--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.12.7",
+    "mysql2": "^3.9.7",
     "nodemon": "^3.0.3",
     "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.9.7",
+    "express": "^4.19.2",
     "sequelize": "^6.37.3"
   }
 }
