--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "sequelize": "^6.37.3",
     "twig": "^1.17.1"
