--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.0",
     "sequelize": "^6.37.3",
     "twig": "^1.17.1"
   }
